...
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="complete">Complete</string>
    <string name="submit">Submit</string>
    <string name="continuous">Continue</string>
    <string name="join_study">Join Study</string>
    <string name="start_task">Start task</string>
</resources>

