...
            if (onClickBack != null) {
                Icon(
                    imageVector = Icons.Default.KeyboardArrowLeft,
                    modifier = Modifier
                        .padding(start = 32.dp, top = 12.dp, bottom = 12.dp, end = 12.dp)
                        .clickable { onClickBack() },
                    contentDescription = "back button icon",
                    tint = color,
                )
            }
        },
        actions = {
            Icon(
...
