...
            id, name,
            TappingSpeedIntroModel(
                id, name,
                body = "Place your phone on a flat surface.\n" +
                    "Use two fingers on right hand to alternatively tap the buttons on the screen.\n" +
                    "Keep tapping for 10 seconds.",
                buttonText = "Start Exercise"
            )
        ),
        TappingSpeedMeasureStep(
            id, name,
            TappingSpeedMeasureModel(
                id, name, null, measureTimeSecond = 10
...
