...
                header = "Right Arm Circumduction",
                body = listOf(
                    "Place phone in your right hand.",
                    "Straighten your right arm and move it in a full circle for 20 sec."
                ),
                drawableId = R.drawable.ic_activity_range_of_motion_right_arm,
                buttonText = "Start Exercise",
            )
        ),
        RangeOfMotionMeasureStep(
            id, name, RangeOfMotionMeasureModel(id, name),
        ),
        SimpleViewActivityStep(
...
            name,
            RangeOfMotionResultModel(
                id,
                name,
                header = completionTitle,
                body = completionDescription,
                buttonText = "Continue"
            )
        ),
        SimpleViewActivityStep(
            id,
            name,
            RangeOfMotionIntroModel(
...
